--- a/HTML/home.html
+++ b/HTML/home.html
@@ -24,7 +24,7 @@
         }
         #button1{
             border: 2px solid rgba(179, 40, 147, 0.618);
-            margin-top: 80px;
+            margin-top: 50px;
             font-size: 30px;
             margin-left: 108px; 
         }
@@ -40,12 +40,22 @@
         #button2:hover{
             background-color: aqua; 
         }
+        #button3{
+            border: 2px solid rgba(179, 40, 147, 0.618);
+            margin-top: 50px;
+            font-size: 30px;
+            margin-left: 95px; 
+        }
+        #button3:hover{
+            background-color: aqua; 
+        }
     </style>
 </head>
 <body>
     <div id="home">
         <button id="button1" onclick="location.href='../HTML/login.html';">Login</button><br>
-        <button id="button2" onclick="location.href='../HTML/Calculator.html';">Calculator</button>
+        <button id="button2" onclick="location.href='../HTML/calculator.html';">Calculator</button>
+        <button id="button3" onclick="location.href='../HTML/gallery.html';">Gallery</button>
     </div>
 </body>
 </html>
